# cryoet-data-portal

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.html  README.md  SECURITY.md  about.html  api_reference.html  changelog.html  cryoet_data_portal_docsite_FAQ.html  cryoet_data_portal_docsite_aws.html  cryoet_data_portal_docsite_aws_download.html  cryoet_data_portal_docsite_data.html  cryoet_data_portal_docsite_examples.html  cryoet_data_portal_docsite_faq.html  cryoet_data_portal_docsite_landing.html  cryoet_data_portal_docsite_napari.html  cryoet_data_portal_docsite_quick_start.html  cryoet_data_portal_installation.html  cryoet_workflow.html  data_model.html  genindex.html  index.html  intro_cryoet.html  neuroglancer_quickstart.html  objects.inv  py-modindex.html  pyproject.toml  python-api.html  release-notes.md  release-please.config.json  release-please.manifest.json  sds.xml  search.html  searchindex.js  sitemap.xml  tutorial_sample_boundaries.html  tutorials.html
.github/: create-slack-payload.js
.infra/: common.yaml
_sources/: README.md.txt  cryoet_data_portal_docsite_FAQ.md.txt  cryoet_data_portal_docsite_aws_download.md.txt  cryoet_data_portal_docsite_data.md.txt  cryoet_data_portal_docsite_faq.md.txt  cryoet_data_portal_docsite_landing.md.txt  cryoet_data_portal_docsite_napari.md.txt  cryoet_data_portal_docsite_quick_start.md.txt  cryoet_data_portal_installation.md.txt  data_model.md.txt  index.rst.txt  intro_cryoet.md.txt  python-api.md.txt  tutorial_sample_boundaries.md.txt
_static/: sphinx_immaterial_theme.2a34f4ce0268c4983.min.css  sphinx_immaterial_theme.59362b978ce63bd4f.min.css  (+1 more)
client/python/cryoet_data_portal/: .coveragerc  CHANGELOG.md  Makefile  README.md  pyproject.toml  release_process.md
client/python/cryoet_data_portal/scripts/: requirements-dev.txt
client/python/cryoet_data_portal/src/cryoet_data_portal/: __init__.py  _client.py  _codegen.py  _codegen_dataset.py  _codegen_models.py  _constants.py  _file_tools.py  _gql_base.py  _model_stubs.py  _models.py  _version.py
client/python/cryoet_data_portal/src/cryoet_data_portal/data/: schema.graphql
client/python/cryoet_data_portal/src/cryoet_data_portal/templates/: Annotation.jinja2  AnnotationFile.jinja2  Dataset.jinja2  Footer.jinja2  Header.jinja2  Model.jinja2  Run.jinja2  TiltSeries.jinja2  Tomogram.jinja2  TomogramVoxelSpacing.jinja2
client/python/cryoet_data_portal/tests/: README.md  conftest.py  cryoet_data_portal  docker-compose.yml  test_alignments.py  test_codegen.py  test_download_annotations.py  test_downloads.py  test_file_tools.py  test_filters.py  test_get_by_id.py  test_get_client.py  tmp.py
client/python/cryoet_data_portal/tests/test_infra/: .gitignore  get_deployment.sh  seed_db.py  seed_moto.sh
client/python/cryoet_data_portal/tests/test_infra/hasura/: README.md
client/python/cryoet_data_portal/tests/test_infra/hasura/metadata/databases/: databases.yaml
client/python/cryoet_data_portal/tests/test_infra/hasura/metadata/databases/cryoetdataportal/tables/: public_annotation_authors.yaml  public_annotation_files.yaml  public_annotations.yaml  public_dataset_authors.yaml  public_dataset_funding.yaml  public_datasets.yaml  public_deposition_authors.yaml  public_depositions.yaml  public_runs.yaml  public_tiltseries.yaml  public_tomogram_authors.yaml  public_tomogram_type.yaml  public_tomogram_voxel_spacings.yaml  public_tomograms.yaml  tables.yaml
client/python/cryoet_data_portal/tests/test_infra/hasura/migrations/cryoetdataportal/: README.md
client/python/cryoet_data_portal/tests/test_infra/hasura/migrations/cryoetdataportal/0000000000000_init/: up.sql
client/python/cryoet_data_portal/tests/test_infra/hasura/migrations/cryoetdataportal/0000000000001_data/: up.sql
client/python/cryoet_data_portal/tests/test_infra/hasura/migrations/cryoetdataportal/1706552817192_alter_annotation_add_tomogram_table/: up.sql
client/python/cryoet_data_portal/tests/test_infra/hasura/migrations/cryoetdataportal/1722547580676_alter_table_public_annotation_authors_add_column_primary_author_status/: up.sql
(+291 files in other folders)
