[build-system]
requires = ["setuptools>=64","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoet_data_portal"
version = "4.4.1"
description = "API Client to facilitate the use of the CryoET Portal. For more information about the API and the project visit https://github.com/chanzuckerberg/cryoet-data-portal/"
authors = [
  { name = "Chan Zuckerberg Initiative", email = "cryoetdataportal@chanzuckerberg.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "requests>=2.0,<3.0",
  "boto3>=1.0.0,<2.0",
  "deepmerge>=2.0,<3.0",
  "gql[requests]>=3.0,<4.0",
  "tqdm>=4.67,<5.0",
  "strcase>=1.0.0,<2.0",
  "jinja2>=3.0,<4.0"
]

[project.urls]
homepage = "https://github.com/chanzuckerberg/cryoet-data-portal"
repository = "https://github.com/chanzuckerberg/cryoet-data-portal"
documentation = "https://chanzuckerberg.github.io/cryoet-data-portal/python-api.html"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "cryoet_data_portal*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
  "tests*",
] # exclude packages matching these glob patterns (empty by default)

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
root = "../../.."

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true

[tool.pytest.ini_options]
markers = ["expensive: too expensive to run regularly or in CI"]
